force-app/main/default/objects/Case_Agency_Role__c/Case_Agency_Role__c.object-meta.xml
<CustomObject>
    <label>Case Agency Role</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Agency Role #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Agency Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>