force-app/main/default/objects/Case_Agency_Role__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Agency Roles</relationshipLabel>
    <relationshipName>Case_Agency_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>