force-app/main/default/objects/Case_Agency_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Placement Partner</fullName>
            </value>
            <value>
                <fullName>Animal Transportation Agency</fullName>
            </value>
            <value>
                <fullName>Assisting Enforcement Agency</fullName>
            </value>
            <value>
                <fullName>Court Clerk&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Lead Animal Care Agency</fullName>
            </value>
            <value>
                <fullName>Lead Enforcement Agency</fullName>
            </value>
            <value>
                <fullName>Private Investigation Agency</fullName>
            </value>
            <value>
                <fullName>Prosecutor&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Reporting Agency</fullName>
            </value>
            <value>
                <fullName>Requesting Agency</fullName>
            </value>
            <value>
                <fullName>Secondary Animal Care Agency</fullName>
            </value>
            <value>
                <fullName>Secondary Enforcement Agency</fullName>
            </value>
            <value>
                <fullName>Subject Agency</fullName>
            </value>
            <value>
                <fullName>Veterinary Care Provider</fullName>
            </value>
            <value>
                <fullName>Animal Care</fullName>
                <isActive>false</isActive>
                <label>Animal Care</label>
            </value>
            <value>
                <fullName>Code Enforcement</fullName>
                <isActive>false</isActive>
                <label>Code Enforcement</label>
            </value>
            <value>
                <fullName>Defendant</fullName>
                <isActive>false</isActive>
                <label>Defendant</label>
            </value>
            <value>
                <fullName>Hired Investigator</fullName>
                <isActive>false</isActive>
                <label>Hired Investigator</label>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
                <isActive>false</isActive>
                <label>Law Enforcement</label>
            </value>
            <value>
                <fullName>Petitioner</fullName>
                <isActive>false</isActive>
                <label>Petitioner</label>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
                <isActive>false</isActive>
                <label>Plaintiff</label>
            </value>
            <value>
                <fullName>Rescue Group</fullName>
                <isActive>false</isActive>
                <label>Rescue Group</label>
            </value>
            <value>
                <fullName>Respondent</fullName>
                <isActive>false</isActive>
                <label>Respondent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>