force-app/main/default/objects/Case_Agency_Role__c/fields/Role_Notes__c.field-meta.xml
<CustomField>
    <fullName>Role_Notes__c</fullName>
    <inlineHelpText>Include any relevant details about this agency and their role</inlineHelpText>
    <label>Role Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>