force-app/main/default/objects/Case_Agency_Role__c/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <formula>Agency__r.Secondary_Phone__c</formula>
    <label>Secondary Phone</label>
    <type>Text</type>
</CustomField>